backend-virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            exact: /api
      route:
        - destination:
            host: backend.default.svc.cluster.local
            port:
              number: 4000
---
