destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: auth-verify-destination-rule
spec:
  host: auth-verify.default.svc.cluster.local
