gateways.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            exact: /
        - uri:
            exact: /api
      route:
        - destination:
            host: backend.default.svc.cluster.local
            port:
              number: 4000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-vs
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
    - match:
        - uri:
            exact: /auth
      route:
        - destination:
            host: auth-verify.default.svc.cluster.local
            port:
              number: 3000
