virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-vs
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
    - name: "auth-routes"
      match:
        - uri:
            exact: /auth
      route:
        - destination:
            host: auth-verify.default.svc.cluster.local
            port:
              number: 3000
    - name: "backend-routes"
      route:
        - destination:
            host: backend.default.svc.cluster.local
            port:
              number: 4000
---
